FIX: overflow hidden on body will lose scroll position

--- a/styles/qing-dialog.scss
+++ b/styles/qing-dialog.scss
@@ -1,5 +1,6 @@
 .qing-dialog-open {
-  overflow: hidden;
+  // overflow hidden will lose page scroll position
+  // overflow: hidden;
 }
 
 .qing-dialog {
